--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2033,7 +2033,7 @@ input, select, textarea {
 	}
 
 		header.major:after {
-			background: rgba(228, 142, 142, 0.5);
+			background: rgba(149, 35, 35, 0.5);
 			content: '';
 			display: inline-block;
 			height: 1px;
@@ -2819,7 +2819,7 @@ input, select, textarea {
 
 		.main.style2 {
 			background-color: #333;
-			color: rgba(255, 255, 255, 0.75);
+			color: rgba(163, 76, 76, 0.75);
 			background-attachment: fixed,							fixed;
 			background-image: url("images/overlay1.png"), url("../../images/header.jpg");
 			background-size: auto,							cover;
@@ -2838,11 +2838,11 @@ input, select, textarea {
 			}
 
 			.main.style2 header p {
-				color: #ffffff;
+				color: #621b1b;
 			}
 
 			.main.style2 header.major:after {
-				background: #ffffff;
+				background: #9c0707;
 			}
 
 			.main.style2 input[type="submit"],
@@ -2850,8 +2850,8 @@ input, select, textarea {
 			.main.style2 input[type="button"],
 			.main.style2 button,
 			.main.style2 .button {
-				box-shadow: inset 0 0 0 1px #ffffff;
-				color: #ffffff !important;
+				box-shadow: inset 0 0 0 1px #d60d0d;
+				color: #751313 !important;
 			}
 
 				.main.style2 input[type="submit"]:hover,
@@ -2859,7 +2859,7 @@ input, select, textarea {
 				.main.style2 input[type="button"]:hover,
 				.main.style2 button:hover,
 				.main.style2 .button:hover {
-					background-color: rgba(255, 255, 255, 0.125);
+					background-color: rgba(143, 8, 8, 0.125);
 				}
 
 				.main.style2 input[type="submit"]:active,
@@ -2867,7 +2867,7 @@ input, select, textarea {
 				.main.style2 input[type="button"]:active,
 				.main.style2 button:active,
 				.main.style2 .button:active {
-					background-color: rgba(255, 255, 255, 0.25);
+					background-color: rgba(80, 13, 13, 0.25);
 				}
 
 				.main.style2 input[type="submit"].primary,
@@ -2875,7 +2875,7 @@ input, select, textarea {
 				.main.style2 input[type="button"].primary,
 				.main.style2 button.primary,
 				.main.style2 .button.primary {
-					background-color: #ffffff;
+					background-color: #6d0808;
 					box-shadow: inset 0 0 0 1px #ffffff !important;
 					color: #333 !important;
 				}
@@ -2885,8 +2885,8 @@ input, select, textarea {
 					.main.style2 input[type="button"].primary:hover,
 					.main.style2 button.primary:hover,
 					.main.style2 .button.primary:hover {
-						background-color: rgba(255, 255, 255, 0.125) !important;
-						color: #ffffff !important;
+						background-color: rgba(88, 8, 8, 0.125) !important;
+						color: #be0909 !important;
 					}
 
 					.main.style2 input[type="submit"].primary:active,
@@ -2909,8 +2909,8 @@ input, select, textarea {
 
 	#header {
 		padding: 9em 0 9em 0 ;
-		background-color: #4686a0;
-		color: rgba(255, 255, 255, 0.75);
+		background-color: #a06a46;
+		color: rgba(240, 236, 9, 0.75);
 		background-attachment: fixed,							fixed,							fixed;
 		background-image: url("images/overlay2.png"), url("images/overlay3.svg"), linear-gradient(45deg, #9dc66b 5%, #4fa49a 30%, #4361c2);
 		background-position: top left,						center center,					center center;
