--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -105,7 +105,7 @@ input, select, textarea {
 		-webkit-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 		-ms-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 		transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
-		
+
 		color: inherit;
 		text-decoration: none;
 	}
@@ -290,6 +290,7 @@ input, select, textarea {
 		flex-wrap: wrap;
 		box-sizing: border-box;
 		align-items: stretch;
+		color: #fff;
 	}
 
 		.row > * {
@@ -2030,10 +2031,12 @@ input, select, textarea {
 
 	header.major {
 		margin: 0 0 1em 0;
+		color: #fff;
 	}
 
 		header.major:after {
 			background: rgba(149, 35, 35, 0.5);
+			color: #fff;
 			content: '';
 			display: inline-block;
 			height: 1px;
@@ -2043,6 +2046,7 @@ input, select, textarea {
 
 		header.major h2, header.major h3, header.major h4, header.major h5, header.major h6 {
 			margin: 0;
+			color: rgba(255, 255, 255, 0.924);
 		}
 
 		header.major p {
@@ -2695,8 +2699,8 @@ input, select, textarea {
 		background-color: transparent;
 		border-radius: 4px;
 		border: 0;
-		box-shadow: inset 0 0 0 1px rgba(144, 144, 144, 0.5);
-		color: #555 !important;
+		box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.5);
+		color: rgb(212, 175, 175) !important;
 		cursor: pointer;
 		display: inline-block;
 		font-size: 0.9em;
@@ -2814,12 +2818,13 @@ input, select, textarea {
 	}
 
 		.main.style1 {
-			background: #fff;
+			background: #36454f;
+			color: #fff;
 		}
 
 		.main.style2 {
-			background-color: #333;
-			color: rgba(163, 76, 76, 0.75);
+			background-color: rgb(255, 255, 255);
+			color: rgba(255, 255, 255, 0.75);
 			background-attachment: fixed,							fixed;
 			background-image: url("images/overlay1.png"), url("../../images/header.jpg");
 			background-size: auto,							cover;
@@ -2937,7 +2942,7 @@ input, select, textarea {
 		}
 
 		#header header.major:after {
-			background: #ffffff;
+			background: #36454f;
 		}
 
 		#header input[type="submit"],
