--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2387,10 +2387,12 @@ input, select, textarea {
 			display: block;
 			margin: 0 0 2em 0;
 			width: 100%;
+			height: 60%;
 		}
 
 			.image.fit img {
 				width: 100%;
+				height: 100%;
 			}
 
 /* List */
