added few blogs and edited layout

--- a/layouts/partials/subtitle.html
+++ b/layouts/partials/subtitle.html
@@ -1,3 +1,5 @@
 {{- with .Site.Params.homeSubtitle }}
-    <p>{{.}}</p>
+    <div style="width:60rem;">
+        <p>{{.}}</p>
+    </div>
 {{- end }}
